# aws-otel-python-instrumentation

rough-work/oltp-udp-exporter/: Readme.md  pyproject.toml
rough-work/oltp-udp-exporter/src/aws_otel_udp_exporter/: __init__.py
rough-work/python-manual-instrumentation-sample-app/: app.py  requirements.txt
